# monkey

./: CMakeLists.txt
src/: ast.cpp  evaluator.cpp  lexer.cpp  object.cpp  parser.cpp  token.cpp
